--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,10 @@
 		<title>{{ .Name }}</title>
 	</head>
 	<body>
+		<nav>
+			&#8962; Home
+			<hr>
+		</nav>
 		<h1>{{ .Name }}</h1>
 		<h2>Tasks</h2>
 		{{ if .Tasks }}
@@ -11,13 +15,15 @@
 			<thead>
 				<tr>
 					<th>Task</th>
-					<th>Action</th>
+					<th>Latest</th>
+					<th>Run</th>
 				</tr>
 			</thead>
 			<tbody>
 			{{- range .Tasks }}
 				<tr>
 					<td>{{ .Name }}</td>
+					<td><a href="latest?task_id={{ .ID }}">latest</a></td>
 					<td>
 						<form action="run" method="POST">
 							<input type="hidden" name="task_id" value="{{ .ID }}" />
@@ -25,7 +31,6 @@
 						</form>
 					</td>
 				</tr>
-			</div>
 			{{ end }}
 			</tbody>
 		</table>
