--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,11 +5,9 @@
 	</head>
 	<body>
 		<nav>
-			&#8962; Home
-			<hr>
+			Home
 		</nav>
 		<h1>{{ .Name }}</h1>
-		<h2>Tasks</h2>
 		{{ if .Tasks }}
 		<table>
 			<thead>
