Add basic run history

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -32,6 +32,9 @@
 							{{ end }}
 							{{ end }}
 						</a>
+						<a href="history?t={{ .ID }}">
+							History
+						</a>
 						{{ else }}
 							None
 						{{ end }}
